# DevCon_claude

./: .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml  settings.local.json
.claude/: settings.local.json
.claude/commands/: setup-template-downstream.md
.devcontainer/: Dockerfile  MIGRATION.md  devcontainer.json  init-firewall.sh  migrate_to_aiwonglab.sh  postCreateCommand.sh  setup_DCA_env.sh  setup_project.sh
.devcontainer-templates/src/.devcontainer/: postCreateCommand.sh
.devcontainer-templates/src/claude-linux-base/: Dockerfile
.devcontainer-templates/src/claude-linux-conda/: Dockerfile  devcontainer.json
.devcontainer-templates/src/claude-linux-cuda/: Dockerfile
.devcontainer-templates/src/claude-wsl-base/: devcontainer.json
.devcontainer-templates/src/claude-wsl-base-dotnet/: devcontainer.json
.devcontainer/firewall-configs/: README.md
.devcontainer/firewall-domains/: ai-services.txt  cloud-providers.txt  core.txt  os-packages.txt  package-managers.txt
templates/: README.md
templates/src/.devcontainer/: devcontainer README.md
templates/src/claude-linux-cuda/: Dockerfile  devcontainer.json
